--- a/src/styles/form.scss
+++ b/src/styles/form.scss
@@ -79,4 +79,15 @@
       font-size: 14px;
     }
   }
+
+  .error-message {
+    color: red;
+    font-size: 12px;
+    margin-top: 4px;
+  }
+
+  .contact-form__input.error,
+  .contact-form__textarea.error {
+    border: 1px solid red;
+  }
 }
