--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -19,7 +19,7 @@ header {
   color: #fff;
   padding: 1rem 0;
   text-align: center;
-  font-size: 1.2rem;
+  font-size: 16px;
 }
 
 header nav {
@@ -49,5 +49,5 @@ footer {
   color: #fff;
   text-align: center;
   padding: 1rem;
-  font-size: 0.875rem;
+  font-size: 12px;
 }
